--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -11,6 +11,7 @@
 
 //PAGES
 @import 'pages/contact-page';
+@import 'pages/contact-details-page';
 
 // COMPONENTS
 @import 'components/app-header';
