scss and responsiv design

--- a/src/assets/styles/components/_contact-list.scss
+++ b/src/assets/styles/components/_contact-list.scss
@@ -3,3 +3,10 @@
     flex-wrap: wrap;
     gap: 20px;
 }
+
+@media (max-width: $break-narrow) {
+    .contact-list{
+        @include flex(column);
+        flex-wrap: nowrap;
+    }
+}
