--- a/src/assets/styles/components/_contact-list.scss
+++ b/src/assets/styles/components/_contact-list.scss
@@ -1,7 +1,8 @@
 .contact-list{
-    @include flex();
+    @include flex(row, space-between);
     flex-wrap: wrap;
     gap: 20px;
+    margin-top: 20px;
 }
 
 @media (max-width: $break-narrow) {
