--- a/src/assets/styles/components/_contact-preview.scss
+++ b/src/assets/styles/components/_contact-preview.scss
@@ -4,18 +4,18 @@
     padding: 20px;
     gap: 10px;
 
-    .contact__img {
+    &__img {
         border-radius: 50%;
         box-shadow: 0px 0px 10px 0px #00000012;
-        width: 100px;
+        width: 126px;
         transition: background-color 0.2s;
     }
 
-    .contact__name {
+    &__name {
         font-size: rem(20px);
     }
 
-    &:hover .contact__img {
+    &:hover &__img {
         background-color: rgba(207, 207, 207, 0.712);
     }
 }
@@ -28,11 +28,11 @@
         border-radius: 50px;
         background-color: rgba(207, 207, 207, 0.712);
 
-        .contact__img {
+        &__img {
             width: 50px;
         }
 
-        &:hover .contact__img {
+        &:hover &__img {
             background-color: rgba(207, 207, 207, 0);
         }
     }
@@ -40,16 +40,16 @@
 
 @media (min-width: $break-normal) {
     .contact {
-        .contact__img {
-            width: 150px;
+        &__img {
+            width: 154px;
         }
     }
 }
 
 @media (min-width: $break-wide) {
     .contact {
-        .contact__img {
-            width: 200px;
+        &__img {
+            width: 228px;
         }
     }
 }
