--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,19 +1,20 @@
 // SETUP
-@import 'setup/typography';
-@import 'setup/variables';
-@import 'setup/functions';
-@import 'setup/mixins';
+@import "setup/typography";
+@import "setup/variables";
+@import "setup/functions";
+@import "setup/mixins";
 
 // BASICS
-@import 'basics/base';
-@import 'basics/layout';
-@import 'basics/helpers';
+@import "basics/base";
+@import "basics/layout";
+@import "basics/helpers";
 
 //PAGES
-@import 'pages/contact-page';
-@import 'pages/contact-details-page';
+@import "pages/contact-page";
+@import "pages/contact-details-page";
 
 // COMPONENTS
-@import 'components/app-header';
-@import 'components/contact-list';
-@import 'components/contact-preview';
+@import "components/app-header";
+@import "components/contact-filter";
+@import "components/contact-list";
+@import "components/contact-preview";
