--- a/src/assets/styles/components/_contact-preview.scss
+++ b/src/assets/styles/components/_contact-preview.scss
@@ -33,7 +33,7 @@
         }
 
         &:hover &__img {
-            background-color: rgba(207, 207, 207, 0);
+            background: none;
         }
     }
 }
