--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -6,20 +6,25 @@
     // background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650031591/photo-1611974789855-9c2a0a7236a3_hlytcr.avif");
     // background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650032371/photo-1642682969825-09c60a60e989_ecty5p.avif");
     background-size: cover;
+    // min-height: 100vh;
+    font-size: 14px;
 
     > * {
         grid-column: 2;
     }
 
     @include for-narrow-layout {
+        font-size: 16px;
         @include layoutGTC($break-narrow);
     }
 
     @include for-normal-layout {
+        font-size: 18px;
         @include layoutGTC($break-normal);
     }
 
     @include for-wide-layout {
+        font-size: 20px;
         @include layoutGTC($break-wide);
     }
 }
