--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -1,7 +1,8 @@
 .main-layout {
     display: grid;
     grid-template-columns: $layoutPadding 1fr $layoutPadding;
-    background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650032903/maxim-hopman-fiXLQXAhCfk-unsplash_qfnsqf.jpg");
+    background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650115482/photo-1541791230600-b62df7fa1cf0_dx6ff3.avif");
+    // background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650032903/maxim-hopman-fiXLQXAhCfk-unsplash_qfnsqf.jpg");
     // background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650032656/photo-1640340434855-6084b1f4901c_jhgpdi.avif");
     // background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650031591/photo-1611974789855-9c2a0a7236a3_hlytcr.avif");
     // background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650032371/photo-1642682969825-09c60a60e989_ecty5p.avif");
