--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,4 +1,11 @@
 // COLORS
+// primary
+$clr1: #ffffff;
+$clr2: grey;
+
+// secondary
+$shadowClr: #00000012;
+$hoverClr: lighten($clr2, 20%);
 
 // // LAYOUT
 $layoutPadding: 20px;
