--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -10,6 +10,7 @@
 @import "basics/helpers";
 
 //PAGES
+@import "pages/home-page";
 @import "pages/contact-page";
 @import "pages/contact-details-page";
 
