--- a/src/assets/styles/components/_contact-filter.scss
+++ b/src/assets/styles/components/_contact-filter.scss
@@ -8,7 +8,7 @@
     &__search {
         border-radius: 5px;
         outline-width: 0px;
-        border: 1px solid rgb(119, 119, 119);
+        border: 1px solid rgba(255, 255, 255, 0);
 
         height: 30px;
         width: 200px;
