--- a/src/assets/styles/components/_contact-preview.scss
+++ b/src/assets/styles/components/_contact-preview.scss
@@ -6,7 +6,7 @@
 
     &__img {
         border-radius: 50%;
-        box-shadow: 0px 0px 10px 0px #00000012;
+        box-shadow: 0px 0px 10px 0px $shadowClr;
         width: 126px;
         transition: background-color 0.2s;
     }
@@ -16,7 +16,7 @@
     }
 
     &:hover &__img {
-        background-color: rgba(207, 207, 207, 0.712);
+        background-color: $hoverClr;
     }
 }
 
@@ -26,10 +26,11 @@
         padding: 5px 20px;
         width: 100%;
         border-radius: 50px;
-        background-color: rgba(207, 207, 207, 0.712);
+        background-color: $hoverClr;
 
         &__img {
             width: 50px;
+            box-shadow: none;
         }
 
         &:hover &__img {
