edit and home style

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -7,7 +7,7 @@
     // background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650031591/photo-1611974789855-9c2a0a7236a3_hlytcr.avif");
     // background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650032371/photo-1642682969825-09c60a60e989_ecty5p.avif");
     background-size: cover;
-    // min-height: 100vh;
+    min-height: 100vh;
     font-size: 14px;
 
     > * {
