--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -5,7 +5,8 @@ $clr2: grey;
 
 // secondary
 $shadowClr: #00000012;
-$hoverClr: lighten($clr2, 20%);
+$hoverClr: #5f5fd2dd;
+// $hoverClr: lighten($clr2, 20%);
 
 // // LAYOUT
 $layoutPadding: 20px;
