--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -13,6 +13,7 @@
 @import "pages/home-page";
 @import "pages/contact-page";
 @import "pages/contact-details-page";
+@import "pages/contact-edit-page";
 
 // COMPONENTS
 @import "components/app-header";
