--- a/src/assets/styles/components/_contact-preview.scss
+++ b/src/assets/styles/components/_contact-preview.scss
@@ -26,7 +26,7 @@
         padding: 5px 20px;
         width: 100%;
         border-radius: 50px;
-        background-color: $hoverClr;
+        background-color: $clr2;
 
         &__img {
             width: 50px;
