--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -20,3 +20,4 @@
 @import "components/contact-filter";
 @import "components/contact-list";
 @import "components/contact-preview";
+@import "components/transfer-fund";
