--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -6,6 +6,7 @@ $clr2: rgb(192 192 192 / 87%);
 // secondary
 $shadowClr: #00000012;
 $hoverClr: #5f5fd2dd;
+$blueClr: #5579af;
 // $hoverClr: lighten($clr2, 20%);
 
 // // LAYOUT
