--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -14,6 +14,7 @@
 @import "pages/contact-page";
 @import "pages/contact-details-page";
 @import "pages/contact-edit-page";
+@import "pages/signup";
 
 // COMPONENTS
 @import "components/app-header";
@@ -21,3 +22,4 @@
 @import "components/contact-list";
 @import "components/contact-preview";
 @import "components/transfer-fund";
+@import "components/move-list";
