--- a/src/assets/styles/pages/_contact-details-page.scss
+++ b/src/assets/styles/pages/_contact-details-page.scss
@@ -24,7 +24,7 @@
             height: 100%;
 
             .details__icon {
-                color: $hoverClr;
+                color: $clr1;
                 position: absolute;
                 left: -40px;
                 top: 3px;
