--- a/src/assets/styles/pages/_contact-page.scss
+++ b/src/assets/styles/pages/_contact-page.scss
@@ -3,7 +3,7 @@
     right: 60px;
     bottom: 60px;
     border-radius: 50%;
-    background-color: $hoverClr;
+    background-color: $clr3;
     font-size: xxx-large;
     width: rem(70px);
     height: rem(70px);
