--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,13 +1,13 @@
 // COLORS
 // primary
 $clr1: #ffffff;
-$clr2: rgb(192 192 192 / 87%);
+$clr2: rgb(222 222 222 / 75%);
 
 // secondary
 $shadowClr: #00000012;
-$hoverClr: #5f5fd2dd;
-$blueClr: #5579af;
-// $hoverClr: lighten($clr2, 20%);
+$clr3: #f54336;
+$clr4: #5579af;
+// $clr3: lighten($clr2, 20%);
 
 // // LAYOUT
 $layoutPadding: 20px;
