--- a/src/assets/styles/components/_move-list.scss
+++ b/src/assets/styles/components/_move-list.scss
@@ -1,17 +1,22 @@
 .moves {
+    @include flex(column);
     background-color: $clr2;
     margin: 20px;
     padding: 20px;
     border-radius: 25px;
     &__title {
-        font-size: 18px;
-        margin-bottom: 10px;
+        font-size: rem(20px);
+        font-weight: 700px;
+        margin-bottom: 20px;
+        box-shadow: 0px 1px 0px 0px $clr1;
     }
 
     &__list {
+        @include flex();
+        flex-wrap: wrap;
+        gap: 40px;
         &__item {
             margin-bottom: 10px;
-            border-bottom: 2px solid rgb(230, 218, 218);
             span {
                 display: block;
             }
