--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -1,35 +1,9 @@
 .main-layout {
     display: grid;
-    grid-template-columns: $layoutPadding 1fr $layoutPadding;
-    // background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650375352/960x0_mcxzmi.jpg");
-    // background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650375324/what-php-modules-required-for-wordpress-_m8clnv.jpg");
-    background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650374965/806427_bvstif.webp");
-    // background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650374921/istockphoto-1253135360-170667a_pwmfsj.jpg");
-    // background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650115482/photo-1541791230600-b62df7fa1cf0_dx6ff3.avif");
-    // background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650032903/maxim-hopman-fiXLQXAhCfk-unsplash_qfnsqf.jpg");
-    // background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650032656/photo-1640340434855-6084b1f4901c_jhgpdi.avif");
-    // background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650031591/photo-1611974789855-9c2a0a7236a3_hlytcr.avif");
-    // background-image: url("https://res.cloudinary.com/trellox/image/upload/v1650032371/photo-1642682969825-09c60a60e989_ecty5p.avif");
-    background-size: cover;
+    grid-template-columns: 1fr 375px 1fr;
     min-height: 100vh;
-    font-size: 14px;
 
     > * {
         grid-column: 2;
-    }
-
-    @include for-narrow-layout {
-        font-size: 16px;
-        @include layoutGTC($break-narrow);
-    }
-
-    @include for-normal-layout {
-        font-size: 18px;
-        @include layoutGTC($break-normal);
-    }
-
-    @include for-wide-layout {
-        font-size: 20px;
-        @include layoutGTC($break-wide);
     }
 }
