--- a/src/assets/styles/components/_app-header.scss
+++ b/src/assets/styles/components/_app-header.scss
@@ -1,7 +1,8 @@
 header {
     @include flex(row, space-evenly);
     padding: 25px;
-    box-shadow: 0px 5px 0px 0px $clr1;
+    background-color: #21242D;
+    width: 100%;
 
     .header__icon {
         font-size: rem(25px);
