--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -1,4 +1,16 @@
 // @font-face {
-//     font-family: OpenSans-Regular;
-//     src: url("/src/assets//fonts/OpenSans-Regular.ttf");
+//     font-family: Inter-Light;
+//     src: url("/src/assets/fonts/Inter/Inter-Light.ttf");
+// }
+// @font-face {
+//     font-family: Inter-Regular;
+//     src: url("/src/assets/fonts/Inter/Inter-Regular.ttf");
+// }
+// @font-face {
+//     font-family: Inter-SemiBold;
+//     src: url("/src/assets/fonts/Inter/Inter-SemiBold.ttf");
+// }
+// @font-face {
+//     font-family: Inter-Bold;
+//     src: url("/src/assets/fonts/Inter/Inter-Bold.ttf");
 // }
