card in home page is done

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -14,7 +14,11 @@ body {
 
 .app{
   background-color: $clrB1;
-  @include flex(column, space-between)
+  @include flex(column, space-between);
+
+  main{
+    margin: rem(24px);
+  }
 }
 
 h1,
