--- a/src/assets/styles/components/_contact-filter.scss
+++ b/src/assets/styles/components/_contact-filter.scss
@@ -1,32 +1,27 @@
 .filter {
-    margin: 20px 20px 0 20px;
-
-    &__icon{
-        margin-inline-end: 5px;
-    }
+    margin: 20px 0;
+    position: relative;
 
     &__search {
-        border-radius: 5px;
-        outline-width: 0px;
-        border: 1px solid rgba(255, 255, 255, 0);
+        background-color: $clrB2;
+        color: $clrN5;
+        caret-color: $clrP1;
+        border: 0;
+        outline: 0;
+        border-radius: 12px;
+        padding: 12px;
+        padding-inline-start: 42px;
+        width: 100%;
 
-        height: 30px;
-        width: 200px;
-        padding-inline-start: 8px;
-    }
-}
-
-@media (max-width: $break-narrow) {
-    .filter {
-        &__search {
-            width: calc(100% - 56px);;
+        &::placeholder {
+            color: $clrN3;
         }
     }
-    
-}
 
-@media (min-width: $break-normal) {
-}
-
-@media (min-width: $break-wide) {
+    &__icon {
+        position: absolute;
+        width: rem(24px);
+        top: 8px;
+        left: 9px;
+    }
 }
