finish contact page and main margin

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -17,8 +17,10 @@ body {
   @include flex(column, space-between);
 
   main{
-    margin: rem(24px);
     @include flex(column);
+    &.add-margin{
+      margin: 0 $marginSides;
+    }
   }
 }
 
