--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -23,6 +23,7 @@ $clr1: #ffffff;
 $clr2: rgb(222 222 222 / 75%);
 
 // // LAYOUT
+$marginSides: 24px;
 $layoutPadding: 20px;
 
 // LAYOUT BREAKPOINTS
