--- a/src/assets/styles/components/_contact-list.scss
+++ b/src/assets/styles/components/_contact-list.scss
@@ -1,6 +1,5 @@
-.contact-list{
+.contact-list {
     @include flex(row);
-    flex-wrap: wrap; 
-    // gap: 20px;
-    // margin-top: 20px;
+    flex-wrap: wrap;
+    gap: 1px solid red;
 }
