--- a/src/assets/styles/pages/_contact-details-page.scss
+++ b/src/assets/styles/pages/_contact-details-page.scss
@@ -12,92 +12,31 @@
         }
     }
 
-    .contact-det {
+    .contact-det1 {
         @include flex();
         gap: 16px;
-
+        
         &__img {
             width: 64px;
             border-radius: 50%;
         }
-
+        
         .details {
-            @include flex(column, center, flex-start);
-            gap: 4px;
-            &__name {
-                font-size: rem(18px);
-            }
-            &__info {
-                font-size: rem(12px);
-                color: $clrN4;
-                background-color: $clrB2;
-                padding: 10px;
-                border-radius: 12px;
+            font-size: rem(18px); 
+            margin-bottom: 16px; 
+        }
+    }
 
-                &__row{
-                    @include flex(row, start);
-                    gap: 4px;
-                    .icon{
-
-                    }
-
-                    span{
-
-                    }
-                }
-                // @include flex(column, space-evenly, flex-start);
-                // height: 100%;
-
-                // &__icon {
-                //     color: $clr1;
-                //     position: absolute;
-                //     left: -40px;
-                //     top: 3px;
-                //     cursor: pointer;
-                // }
-
-                // &__email,
-                // &__phone {
-                //     position: relative;
-                // }
+    .contact-det2 {
+        .row{
+            @include black-row;
+            i{
+                color: $clrP1;
             }
         }
     }
-}
 
-@media (max-width: $break-narrow) {
-    .details-cmp {
-        .contact-det {
-            flex-direction: column;
-            align-items: flex-start;
-
-            &__img {
-                width: 100px;
-            }
-
-            .details {
-                padding-inline-start: 30px;
-            }
-        }
-    }
-}
-
-@media (min-width: $break-normal) {
-    .details-cmp {
-        .contact-det {
-            &__img {
-                width: 250px;
-            }
-        }
-    }
-}
-
-@media (min-width: $break-wide) {
-    .details-cmp {
-        .contact-det {
-            &__img {
-                width: 300px;
-            }
-        }
+    .add-trans{
+        @include btn;
     }
 }
