--- a/src/assets/styles/components/_contact-filter.scss
+++ b/src/assets/styles/components/_contact-filter.scss
@@ -4,19 +4,8 @@
     width: 100%;
 
     &__search {
-        background-color: $clrB2;
-        color: $clrN5;
-        caret-color: $clrP1;
-        border: 0;
-        outline: 0;
-        border-radius: 12px;
-        padding: 12px;
+        @include input;
         padding-inline-start: 42px;
-        width: 100%;
-
-        &::placeholder {
-            color: $clrN3;
-        }
     }
 
     &__icon {
